fix: replace Runtime.exec() string concatenation with ProcessBuilder to prevent command injection (CWE-78)